onClick Methods initialized. TextViews Cleared.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Unit Converter</string>
 
     <string-array name="spinnerLabels">
+<!--        Spinner Positions - 0, 1, 2-->
         <item>Metre</item>
         <item>Celsius</item>
         <item>Kilograms</item>
